@@ -12,6 +12,7 @@
 * Stripe: Support new network tokenization API params [methodmissing]
 * Vanco: Improve handling of success determination [duff]
 * PayU Latam: Add new gateway [shasum]
+* Find countries if they are differently cased [curiousepic]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
